feat: backtesting perf + fish export db cron
